[tool.poetry]
name = "Bar"
version = "1.2.1"
description = "The Bar Python library"
authors = [
    "Alice <alice@org.com>",
    "Bob <bob@org.com>",
]

# Ref: https://github.com/python-poetry/poetry/issues/167#issuecomment-530895533
packages = [ { include = "org", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"

numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
# testing
pytest = "^7.4"
# linting
black = "^23.12"
mypy = "^1.8"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
